Fetch API key by OAuth